# llm-from-scratch

./: README.md  pyproject.toml
data/notebooks/: download_datasets.ipynb
llm/: gpt.py
llm/layers/: attention.py  gpt.py  mlp.py  norm.py
